# parlex

./: Cargo.toml  README.md
arena-terms-parser/: Cargo.toml  README.md  build.rs
arena-terms-parser/src/: lexer.rs  lib.rs  oper.rs  parser.rs  term.alex  term.g  termx.g
parlex/: CHANGELOG.md  Cargo.toml  README.md
parlex-calc/: CHANGELOG.md  Cargo.toml  README.md  build.rs
parlex-calc/src/: calc.alex  calc.g  calc.rs  error.rs  lexer.rs  lib.rs  main.rs  parser.rs  symtab.rs  token.rs
parlex-gen/: CHANGELOG.md  Cargo.toml  README.md
parlex-gen/examples/: expr.alex  lexer.alex  parser.g
parlex-gen/examples/alex/: termx.alex
parlex-gen/examples/aslr/: deref1.g  deref2.g  termx.g
parlex-gen/src/: alex.rs  aslr.rs  lib.rs
parlex-gen/src/aslr/: generate.rs  lexer.rs  parser.rs  slr.rs  symtab.rs
parlex/src/: cursor.rs  error.rs  lexer.rs  lib.rs  parser.rs  test_lexer_data.rs  test_parser_data.rs
src/: lexer.rs  lib.rs
