[workspace]
members = ["parlex", "parlex-gen", "arena-terms-parser"]
resolver = "2"

[workspace.package]
version = "0.1.7"
edition = "2024"
rust-version = "1.89"
authors = ["IKH Software, Inc. <support@ikhsoftware.com>"]
license = "LGPL-3.0-or-later"
repository = "https://github.com/ikhomyakov/parlex.git"
keywords = ["parser", "lexer", "generator", "slr", "regex"]
categories = ["parsing", "compilers"]

[workspace.dependencies]
parlex = { version = "0.1.7", path = "parlex" }
parlex-gen = { version = "0.1.7", path = "parlex-gen" }
anyhow = "1.0.99"
regex-automata = "0.4.9"
regex-syntax = "0.8.5"
smartstring = "1.0.1"
env_logger = "0.11.8"
hex = "0.4.3"
log = "0.4.27"
clap = { version = "4.5.48", features = ["derive"] }
logos = "0.15.1"
chumsky = "0.11.1"
once_cell = "1.21.3"
regex = "1.11.2"
arena-terms = "0.3.0"
indexmap = "2.11.4"
chrono = "0.4.42"
include_bytes_aligned = "0.1.4"
