[package]
name = "parlex-calc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
description = "Parlex example: simple calculator"

build = "build.rs"

[dependencies]
parlex.workspace = true
smartstring.workspace = true
try-next.workspace = true
thiserror.workspace = true
include_bytes_aligned.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true
indexmap.workspace = true

[build-dependencies]
parlex-gen.workspace = true
